--- a/Wexflow.Clients.Manager/Wexflow.Clients.Manager.csproj
+++ b/Wexflow.Clients.Manager/Wexflow.Clients.Manager.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortableBindingList.cs" />
-    <Compile Include="WorkflowInfo.cs" />
+    <Compile Include="WorkflowDataInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
